<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/resultView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="#fff"
        android:gravity="bottom|end"
        android:maxLength="12"
        android:maxLines="1"
        android:text="@string/_0"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/grid_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightOrange"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ACtextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ac"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/orange"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/deleteTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/del"
                android:textColor="@color/orange"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/percentTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/percent"
                android:textColor="@color/orange"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

            <TextView
                android:id="@+id/divideTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/divide"
                android:textColor="@color/orange"
                android:textSize="20sp"
                app:layout_columnWeight="1"
                app:layout_rowWeight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightOrange"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/sevenTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_7"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/eightTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_8"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/nineTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_9"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/multiplyTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/multiply"
                android:textColor="@color/orange"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightOrange"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fourTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_4"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/fiveTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_5"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/sixTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_6"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/minusTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minus"
                android:textColor="@color/orange"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightOrange"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/oneTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_1"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/twoTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_2"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/threeTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_3"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/plusTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/plus"
                android:textColor="@color/orange"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightOrange"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zeroTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/pointTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/point"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/equalTextView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/equal"
                android:textColor="@color/orange"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
